--- a/convert coordinates to address.ipynb
+++ b/convert coordinates to address.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,20 +26,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cadastro de Unidades - CANF.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df_registros = pd.read_excel(FILENAME, sheet_name=TARGET_SHEET, header=2, index_col=0)\n"
+    "df_registros = pd.read_excel(FILENAME, sheet_name=TARGET_SHEET, header=2, index_col=0)\n",
+    "df_registros['Latitude'] = df_registros['Latitude'].str.replace('--','-')\n",
+    "df_registros['Longitude'] = df_registros['Longitude'].str.replace(',','')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordenadas = df_registros[[\"Latitude\", \"Longitude\"]].agg(\",\".join, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **T**ransform\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Google API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from geopy.geocoders import GoogleV3\n",
+    "# geolocator = GoogleV3(api_key = GOOGLE_API_KEY)\n",
+    "# df_localizacao = coordenadas.apply(geolocator.reverse)\n",
+    "# df_localizacao.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Nominatim API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from geopy.geocoders import Nominatim\n",
+    "from geopy.point import Point\n",
+    "import numpy as np\n",
+    "geolocator = Nominatim(user_agent=\"GPSregistros\", timeout=200)\n",
+    "\n",
+    "\n",
+    "def reverse_geocoding(lat, lon):\n",
+    "    try:\n",
+    "        location = geolocator.reverse(Point(lat, lon))\n",
+    "        return location.raw['display_name']\n",
+    "    except:\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "df_localizacao = np.vectorize(reverse_geocoding)(df_registros['Latitude'], df_registros['Longitude'])\n",
+    "\n",
+    "df_localizacao.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **L**oad"
    ]
   }
  ],
