Refactor code to convert coordinates to address
- Refactored code to improve readability and organization
- Made code changes to handle edge cases and improve accuracy
- Updated code to use appropriate libraries and methods
- Implemented new function to handle reverse geocoding
- Added new column to dataframe with addresses
- Updated load section to save changes to Excel file

--- a/convert coordinates to address.ipynb
+++ b/convert coordinates to address.ipynb
@@ -16,33 +16,26 @@
    "outputs": [],
    "source": [
     "import yaml\n",
-    "with open('data.yml') as yaml_file:\n",
+    "\n",
+    "with open(\"data.yml\") as yaml_file:\n",
     "    data = yaml.safe_load(yaml_file)\n",
-    "    \n",
-    "FILENAME = data['filename']\n",
-    "TARGET_SHEET = data['sheet']\n",
-    "GOOGLE_API_KEY = data['google_api_key']"
+    "\n",
+    "FILENAME = data[\"filename\"]\n",
+    "TARGET_SHEET = data[\"sheet\"]\n",
+    "GOOGLE_API_KEY = data[\"google_api_key\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "df_registros = pd.read_excel(FILENAME, sheet_name=TARGET_SHEET, header=2, index_col=0)\n",
-    "df_registros['Latitude'] = df_registros['Latitude'].str.replace('--','-')\n",
-    "df_registros['Longitude'] = df_registros['Longitude'].str.replace(',','')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coordenadas = df_registros[[\"Latitude\", \"Longitude\"]].agg(\",\".join, axis=1)"
+    "df_registros[\"Latitude\"] = df_registros[\"Latitude\"].str.replace(\"--\", \"-\")\n",
+    "df_registros[\"Longitude\"] = df_registros[\"Longitude\"].str.replace(\",\", \"\")"
    ]
   },
   {
@@ -62,14 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from geopy.geocoders import GoogleV3\n",
-    "# geolocator = GoogleV3(api_key = GOOGLE_API_KEY)\n",
-    "# df_localizacao = coordenadas.apply(geolocator.reverse)\n",
-    "# df_localizacao.head()"
+    "import numpy as np\n",
+    "from geopy.geocoders import GoogleV3\n",
+    "from geopy.point import Point\n",
+    "\n",
+    "geolocator = GoogleV3(api_key=GOOGLE_API_KEY)\n",
+    "\n",
+    "\n",
+    "def reverse_geocoding(lat, lon):\n",
+    "    try:\n",
+    "        location = geolocator.reverse(Point(lat, lon))\n",
+    "        return location[0]\n",
+    "    except Exception as error:\n",
+    "        print(error)\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "df_localizacao = np.vectorize(reverse_geocoding)(df_registros[\"Latitude\"], df_registros[\"Longitude\"])\n"
    ]
   },
   {
@@ -81,27 +87,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "from geopy.geocoders import Nominatim\n",
     "from geopy.point import Point\n",
-    "import numpy as np\n",
+    "\n",
     "geolocator = Nominatim(user_agent=\"GPSregistros\", timeout=200)\n",
     "\n",
     "\n",
     "def reverse_geocoding(lat, lon):\n",
     "    try:\n",
     "        location = geolocator.reverse(Point(lat, lon))\n",
-    "        return location.raw['display_name']\n",
+    "        return location.raw[\"display_name\"]\n",
     "    except:\n",
     "        return None\n",
     "\n",
     "\n",
-    "df_localizacao = np.vectorize(reverse_geocoding)(df_registros['Latitude'], df_registros['Longitude'])\n",
-    "\n",
-    "df_localizacao.head()\n"
+    "df_localizacao = np.vectorize(reverse_geocoding)(df_registros[\"Latitude\"], df_registros[\"Longitude\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_registros[\"Endereços\"] = df_localizacao\n",
+    "df_registros[\"Endereços\"]"
    ]
   },
   {
@@ -109,6 +124,16 @@
    "metadata": {},
    "source": [
     "## **L**oad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with pd.ExcelWriter(FILENAME, mode=\"a\", engine=\"openpyxl\", if_sheet_exists=\"overlay\") as writer:\n",
+    "    df_registros.to_excel(writer, sheet_name=TARGET_SHEET)\n"
    ]
   }
  ],
